--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /*  your css code here. If applicable */
+.nav{padding:10px;	
+}
+.nav li{display:inline;
+	margin-right:1rem;
+		list-style:none;
+}
+.nav a{
+ text-decoration:none;	
+}
+
+
